feat: 한국어 추가 및 프랑스어 제거

--- a/data/authors/en/jeonghyunan.mdx
+++ b/data/authors/en/jeonghyunan.mdx
@@ -1,14 +1,19 @@
 ---
 default: true
 name: Jeong Hyun An
-avatar: /static/images/avatar.png
-occupation: Ex-Software Engineer
-email: zonajha0402@gmail.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
+avatar: /static/images/profile2.png
+occupation: Frontend developer
+email: jha0402@gmail.com
+twitter: https://x.com/zenojha
+linkedin: https://www.linkedin.com/in/zenoan/
+github: https://github.com/jha0402
 language: en
 ---
 
 Hi you can call me John.
 
-I've been through primary, secondary, high school education in Mexico and lived for 13 years.
+I am a frontend developer and develop web services using React and Typescript.
+
+I have work experience mainly in the ecommerce industry and I strive to develop while keeping in mind the management of service quality, stability, scalability, and development productivity.
+
+I am currently interested in the frontend devops and the frontend architecture such as micro-frontends.
