--- a/app/[locale]/i18n/locales/ko/home.json
+++ b/app/[locale]/i18n/locales/ko/home.json
@@ -1,7 +1,7 @@
 {
   "greeting": "최신 글",
   "description": "Next.js, i18n, Tailwind.css로 만든 블로그",
-  "more": "더 읽기",
+  "more": "더 보기",
   "all": "모든 글",
   "moreaboutme": "나에 대해 더 알아보기",
   "featured": "추천 글",
