--- a/app/[locale]/i18n/locales/en/home.json
+++ b/app/[locale]/i18n/locales/en/home.json
@@ -2,7 +2,7 @@
   "greeting": "Latest",
   "description": "A blog created with Next.js, i18n and Tailwind.css",
   "more": "Read more",
-  "all": "All posts",
+  "all": "All tags",
   "moreaboutme": "More about me",
   "featured": "Featured",
   "morefeatured": "More featured posts",
