--- a/data/blog/ko/SEO-with-Next.js.mdx
+++ b/data/blog/ko/SEO-with-Next.js.mdx
@@ -10,7 +10,7 @@ tags: ['SEO', 'C2C', 'Ecommerce', 'Next.js']
 authors: ['안정현']
 draft: false
 featured: true
-summary: 'My experience with SEO of a C2C ecommerce website using Next.js.'
+summary: 'Next.js를 사용한 C2C 이커머스 웹사이트 검색 엔진 최적화 경험'
 ---
 
 # Next.js로 검색 엔진 최적화하기
