--- a/data/authors/ko/jeonghyunan.mdx
+++ b/data/authors/ko/jeonghyunan.mdx
@@ -10,8 +10,10 @@ github: https://github.com/jha0402
 language: ko
 ---
 
-React와 Typescript를 사용해 웹 서비스를 개발하는 프론트엔드 개발자입니다.
+React와 Typescript를 기반으로 웹 서비스를 개발합니다.
 
-주로 이커머스 산업에서의 업무 경험이 있으며, 서비스의 품질/안정성/확장성 관리와 개발 생산성을 생각하면서 개발하려고 노력합니다.
+주로 이커머스 도메인에서 경력이 있으며 중고나라에서는 프론트엔드 팀을 기술적으로 리드하고, 웹 그리고 앱 내 웹뷰, SEO, 성능 최적화 등을 담당해서 일을 한 경험이 있습니다.
 
-현재 마이크로 프론트엔드와 프론트엔드 데브옵스와 같은 프론트엔드 아키텍처에 관심을 갖고 공부하고 있습니다.
+문제를 해결하고 비즈니스 성장에 기여하는 것을 생각합니다. 웹 서비스 SEO 및 성능 최적화로 인해 MAU 250% 이상 증가 성과 달성 경험이 있습니다.
+
+최신기술에 관심이 많으며, 비효율적인 프로세스를 개선하는 일을 좋아합니다. 최근에는 마이크로 프론트엔드 아키텍쳐 그리고 프론트엔드를 위한 클라우드 기술에 관심을 갖고 공부하고 있습니다.
