fix: change logo

--- a/app/[locale]/i18n/locales/ko/projects.json
+++ b/app/[locale]/i18n/locales/ko/projects.json
@@ -1,6 +1,6 @@
 {
   "title": "프로젝트",
-  "description": "대표 이미지(16 x 9)와 함께 프로젝트를 소개하세요",
+  "description": "참여한 작업 및 프로젝트",
   "read": "더 보기",
   "visit": "프로젝트 방문",
   "subtitle": "여기에서 현재 진행 중인 프로젝트에 대한 정보를 찾을 수 있습니다",
