--- a/app/[locale]/i18n/locales/en/projects.json
+++ b/app/[locale]/i18n/locales/en/projects.json
@@ -1,6 +1,6 @@
 {
   "title": "Projects",
-  "description": "Showcase your projects with a hero image (16 x 9)",
+  "description": "Work and projects I worked on",
   "read": "Read more",
   "visit": "Visit project",
   "subtitle": "Here you will find information about my current projects",
