chore: fix grammar

--- a/app/[locale]/i18n/locales/en/projects.json
+++ b/app/[locale]/i18n/locales/en/projects.json
@@ -1,6 +1,6 @@
 {
   "title": "Projects",
-  "description": "Work and projects I worked on",
+  "description": "Works and projects I've worked on",
   "read": "Read more",
   "visit": "Visit project",
   "subtitle": "Here you will find information about my current projects",
