fix: tag filtering bug

--- a/data/blog/en/6-aspects-to-consider-to-improve-your-websites-technical-SEO.mdx
+++ b/data/blog/en/6-aspects-to-consider-to-improve-your-websites-technical-SEO.mdx
@@ -1,10 +1,16 @@
 ---
 title: 6 aspects to consider to improve your website's technical SEO.
-description: What I learned working on technical SEO.
-publishedAt: '2022-12-14'
-englishOnly: 'true'
-banner: 'v1674558442/zenolog/banner/nisonco-pr-and-seo-40Ji24OuUeQ-unsplash_zunz8w.jpg'
-tags: 'SEO,Technical SEO'
+series:
+  order: 2
+  title: 'SEO'
+summary: What I learned working on technical SEO.
+date: '2022-12-14'
+lastmod: '2024-09-25'
+language: en
+draft: false
+featured: true
+authors: ['Jeong Hyun An']
+tags: ['seo', 'technical-seo']
 ---
 
 # 6 aspects to consider to improve your website's technical SEO.
