--- a/data/blog/ko/6-aspects-to-consider-to-improve-your-websites-technical-SEO.mdx
+++ b/data/blog/ko/6-aspects-to-consider-to-improve-your-websites-technical-SEO.mdx
@@ -10,7 +10,7 @@ language: ko
 draft: false
 featured: true
 authors: ['Jeong Hyun An']
-tags: ['SEO', 'Technical SEO']
+tags: ['seo', 'technical-seo']
 ---
 
 # 웹사이트의 기술적 SEO를 개선하기 위해 고려해야 할 6가지
