--- a/data/blog/en/SEO-with-Next.js.mdx
+++ b/data/blog/en/SEO-with-Next.js.mdx
@@ -6,7 +6,7 @@ series:
 date: '2022-11-27'
 lastmod: '2024-09-16'
 language: en
-tags: ['SEO', 'C2C', 'Ecommerce', 'Next.js']
+tags: ['seo', 'c2c', 'ecommerce', 'nextjs']
 authors: ['Jeong Hyun An']
 draft: false
 featured: true
