feature: add hero component

--- a/app/[locale]/i18n/locales/ko/home.json
+++ b/app/[locale]/i18n/locales/ko/home.json
@@ -1,6 +1,6 @@
 {
   "greeting": "최신 글",
-  "description": "Next.js, i18n, Tailwind.css로 만든 블로그",
+  "description": "",
   "more": "더 보기",
   "all": "모든 태그",
   "moreaboutme": "나에 대해 더 알아보기",
