--- a/data/blog/ko/6-aspects-to-consider-to-improve-your-websites-technical-SEO.mdx
+++ b/data/blog/ko/6-aspects-to-consider-to-improve-your-websites-technical-SEO.mdx
@@ -9,7 +9,7 @@ lastmod: '2024-09-25'
 language: ko
 draft: false
 featured: true
-authors: ['Jeong Hyun An']
+authors: ['안정현']
 tags: ['seo', 'technical-seo']
 ---
 
