--- a/app/[locale]/i18n/locales/en/home.json
+++ b/app/[locale]/i18n/locales/en/home.json
@@ -1,6 +1,6 @@
 {
   "greeting": "Latest",
-  "description": "A blog created with Next.js, i18n and Tailwind.css",
+  "description": "",
   "more": "Read more",
   "all": "All tags",
   "moreaboutme": "More about me",
