chore: hero description

--- a/app/[locale]/i18n/locales/en/hero.json
+++ b/app/[locale]/i18n/locales/en/hero.json
@@ -2,7 +2,7 @@
   "greeting": "Hi!",
   "secondline": "You can call me",
   "name": "John",
-  "description": "I'm a software developer working mainly with React and Typescript. Currently I work on SEO and frontend devops.",
+  "description": "I develop web services with React and TypeScript, specializing in e-commerce, WebView, SEO, performance optimization, and frontend DevOps.",
   "firstbutton": "Read the blog",
   "secondbutton": "Learn more about me",
   "resume": "Resume",
