--- a/app/[locale]/i18n/locales/ko/hero.json
+++ b/app/[locale]/i18n/locales/ko/hero.json
@@ -3,7 +3,7 @@
   "secondline": "프론트엔드 개발자",
   "name": "안정현",
   "namesubfix": "입니다",
-  "description": "React와 Typescript를 기반으로 웹 서비스를 개발합니다. 주로 이커머스 도메인에서 경력이 있으며 프론트엔드 팀을 기술적으로 리드하고, 웹 그리고 앱 내 웹뷰, SEO, 성능 최적화 등을 담당해서 일을 한 경험이 있습니다.",
+  "description": "React와 Typescript로 웹 서비스를 개발하며, 이커머스 도메인에서의 경험을 바탕으로 웹과 앱(WebView) 개발, SEO 및 성능 최적화, 프론트엔드 DevOps를 담당해왔습니다.",
   "firstbutton": "블로그",
   "secondbutton": "소개",
   "resume": "이력서",
