chore: fix blog post description

--- a/data/blog/ko/Orphan-pages-in-a-C2C-Ecommerce-website.mdx
+++ b/data/blog/ko/Orphan-pages-in-a-C2C-Ecommerce-website.mdx
@@ -3,7 +3,7 @@ title: C2C 이커머스 웹사이트에서의 고립 페이지(orphan pages) 문
 series:
   order: 3
   title: 'SEO'
-summary: 이 블로그 글에서는 제가 근무 중인 C2C 이커머스 플랫폼 회사에서 SEO의 **고립 페이지(orphan pages)** 문제를 해결한 경험을 공유하고자 합니다. 이 문제는 회사 웹사이트의 SEO를 개선하기 위해 해결해야 할 가장 중요한 문제 중 하나였습니다.
+summary: 이 블로그 글에서는 제가 근무 중인 C2C 이커머스 플랫폼 회사에서 SEO의 고립 페이지(orphan pages) 문제를 해결한 경험을 공유하고자 합니다. 이 문제는 회사 웹사이트의 SEO를 개선하기 위해 해결해야 할 가장 중요한 문제 중 하나였습니다.
 date: '2022-12-14'
 lastmod: '2024-09-29'
 language: ko
