--- a/app/[locale]/i18n/locales/ko/home.json
+++ b/app/[locale]/i18n/locales/ko/home.json
@@ -5,6 +5,7 @@
   "all": "모든 태그",
   "moreaboutme": "나에 대해 더 알아보기",
   "featured": "추천 글",
+  "featuredprojects": "프로젝트",
   "morefeatured": "더 많은 추천 글",
   "morerecent": "더 많은 최신 글",
   "search": "기사 검색",
@@ -23,5 +24,9 @@
   "github": "GitHub에서 보기",
   "draft": "작성 중",
   "noposts": "게시물이 없습니다",
-  "poststagged": "태그된 글 보기"
+  "poststagged": "태그된 글 보기",
+  "linkto": "링크 연결",
+  "read": "더 보기",
+  "visit": "프로젝트 방문",
+  "moreprojects": "프로젝트 더 보기"
 }
