blog: microfrontends post

--- a/data/blog/ko/SEO-with-Next.js.mdx
+++ b/data/blog/ko/SEO-with-Next.js.mdx
@@ -9,7 +9,7 @@ language: ko
 tags: ['seo', 'c2c', 'ecommerce', 'nextjs']
 authors: ['안정현']
 draft: false
-featured: true
+featured: false
 summary: 'Next.js를 사용한 C2C 이커머스 웹사이트 검색 엔진 최적화 경험'
 ---
 
