--- a/data/blog/en/6-aspects-to-consider-to-improve-your-websites-technical-SEO.mdx
+++ b/data/blog/en/6-aspects-to-consider-to-improve-your-websites-technical-SEO.mdx
@@ -10,6 +10,8 @@ language: en
 draft: false
 featured: true
 authors: ['Jeong Hyun An']
+layout: PostBanner
+images: ['v1674558442/zenolog/banner/nisonco-pr-and-seo-40Ji24OuUeQ-unsplash_zunz8w.jpg']
 tags: ['seo', 'technical-seo']
 ---
 
