--- a/data/authors/en/jeonghyunan.mdx
+++ b/data/authors/en/jeonghyunan.mdx
@@ -2,7 +2,7 @@
 default: true
 name: Jeong Hyun An
 avatar: /static/images/profile2.png
-occupation: Frontend developer
+occupation: Product Engineer
 email: jha0402@gmail.com
 twitter: https://x.com/zenojha
 linkedin: https://www.linkedin.com/in/zenoan/
@@ -12,8 +12,10 @@ language: en
 
 Hi you can call me John.
 
-I am a frontend developer and develop web services using React and Typescript.
+As a product engineer focused on user-centric problem-solving, I excel in both planning and development.
 
-I have work experience mainly in the ecommerce industry and I strive to develop while keeping in mind the management of service quality, stability, scalability, and development productivity.
+I lead the entire process from initial service design to implementation and optimization,
 
-I am currently interested in the frontend devops and the frontend architecture such as micro-frontends.
+leveraging data-driven decision-making and cross-functional collaboration to enhance user experiences.
+
+My expertise bridges technology and business objectives to drive sustainable growth.
