--- a/data/authors/ko/jeonghyunan.mdx
+++ b/data/authors/ko/jeonghyunan.mdx
@@ -2,17 +2,17 @@
 default: true
 name: 안정현
 avatar: /static/images/profile2.png
-occupation: 프론트엔드 개발자
+occupation: 프로덕트 엔지니어
 email: jha0402@gmail.com
 linkedin: https://www.linkedin.com/in/zenoan/
 github: https://github.com/jha0402
 language: ko
 ---
 
-React와 Typescript를 기반으로 웹 서비스를 개발합니다.
+사용자 중심의 문제 해결에 중점을 둔 프로덕트 엔지니어로서 기획과 개발을 아우르는 역량을 보유하고 있습니다.
 
-주로 이커머스 도메인에서 경력이 있으며 중고나라에서는 프론트엔드 팀을 기술적으로 리드하고, 웹 그리고 앱 내 웹뷰, SEO, 성능 최적화 등을 담당해서 일을 한 경험이 있습니다.
+서비스의 초기 기획부터 구현, 최적화까지 전 과정을 주도하며 데이터 기반의 의사결정과 협업을 통해 사용자 경험을 극대화합니다.
 
-문제를 해결하고 비즈니스 성장에 기여하는 것을 생각합니다. 웹 서비스 SEO 및 성능 최적화로 인해 MAU 250% 이상 증가 성과 달성 경험이 있습니다.
+다양한 이해관계자와의 원활한 커뮤니케이션을 바탕으로, 복잡한 문제를 체계적으로 분석하고 효과적인 솔루션을 제시합니다.
 
-최신기술에 관심이 많으며, 비효율적인 프로세스를 개선하는 일을 좋아합니다. 최근에는 마이크로 프론트엔드 아키텍쳐 그리고 프론트엔드를 위한 클라우드 기술에 관심을 갖고 공부하고 있습니다.
+기술과 비즈니스 목표를 연결하여 지속 가능한 성장을 실현하는 데 기여합니다.
